@@ -1,3 +1,8 @@
+2004-09-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b206
+
+	* Change: If we're in mambo, just set the session info all the time.
+	  Only setting the info when popups were created tended to yield errors.
+
 2004-09-23  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b205
 
 	* Fix: Also replace this instance of printf (see log message for b204)
